--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*/////////////////////////////////////////////////
-///---------------------------------------------///
-///		CSS-Stylesheet 	for Assignment 2		///
-///		Hannu Ranta 2013						///
-///		All rights reserved						///
-///---------------------------------------------///
+///------------------------------------------------
+///		CSS-Stylesheet 	for Assignment 2		
+///		Hannu Ranta 2013						
+///		All rights reserved						
+///------------------------------------------------
 /////////////////////////////////////////////////*/
 
 /* Common Body-part: */
