Prepared to publish
Modified files for publishing project. Readme-file added.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*/////////////////////////////////////////////////
 ///------------------------------------------------
-///		CSS-Stylesheet 	for Assignment 2		
+///		CSS-Stylesheet 	for ShadowStore		
 ///		Hannu Ranta 2013						
 ///		All rights reserved						
 ///------------------------------------------------
